--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -18,11 +18,85 @@
       <dd><img src="<%= @director.image_url %>" width="100"></dd>
 
       <dt>Number of movies</dt>
-      <dd><%= %></dd>
+      <dd><%= Movie.where(:director_id => @director.id).count%></dd>
 
       <dt>Filmography</dt>
-      <dd></dd>
+      <dd>
+        <ul class="list-group">
+            <% Movie.where(:director_id => @director.id).each do |movie| %>
+                <li class="list-group-item">
+                  <a href="/movies/<%=movie.id%>">
+                    <%= movie.title %> (<%=movie.year%>)
+                  </a>
+                </li>
+            <% end %>
+          </li>
+          <li class="list-group-item">
+            <form action="/create_movie" method="post">
+              <!-- Hidden input for authenticity token to protect from forgery -->
+              <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
+              <!-- Label and input for title -->
+              <div class="form-group">
+                <label for="title" class="control-label">
+                  Title
+                </label>
+
+                <input type="text" id="title" name="title" placeholder="Title" class="form-control" value="<%= @movie.title %>">
+              </div>
+
+              <!-- Label and input for year -->
+              <div class="form-group">
+                <label for="year" class="control-label">
+                  Year
+                </label>
+
+                <input type="text" id="year" name="year" placeholder="Year" class="form-control" value="<%= @movie.year %>">
+              </div>
+
+              <!-- Label and input for duration -->
+              <div class="form-group">
+                <label for="duration" class="control-label">
+                  Duration
+                </label>
+
+                <input type="text" id="duration" name="duration" placeholder="Duration" class="form-control" value="<%= @movie.duration %>">
+              </div>
+
+              <!-- Label and input for description -->
+              <div class="form-group">
+                <label for="description" class="control-label">
+                  Description
+                </label>
+
+                <textarea id="description" name="description" placeholder="Description" class="form-control" rows="3"><%= @movie.description %></textarea>
+              </div>
+
+              <!-- Label and input for image_url -->
+              <div class="form-group">
+                <label for="image_url" class="control-label">
+                  Image url
+                </label>
+
+                <input type="text" id="image_url" name="image_url" placeholder="Image url" class="form-control" value="<%= @movie.image_url %>">
+              </div>
+
+              <!-- Input for director_id -->
+                <input type="hidden" id="director_id" name="director_id" placeholder="Director" class="form-control" value="<%= @director.id %>">
+              <button class="btn btn-success">
+                Create Movie
+              </button>
+              or
+              <a href="/movies">Cancel</a>
+            </form>
+
+
+
+
+
+
+          </li>
+      </dd>
     </dl>
 
     <div class="btn-group btn-group-justified">
