--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,15 +40,17 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="/movies">Movies</a></li>
           <li><a href="/directors">Directors</a></li>
-          <li><a href="/rails/info">Sitemap</a></li>
+          <li><a href="/movies">Movies</a></li>
+          <li><a href="/characters">Characters</a></li>
+          <li><a href="/actors">Actors</a></li>
         </ul>
 
-        <ul class="nav navbar-nav navbar-right">
+      <!-- No need for Sign Out Linnks -->
+        <!-- <ul class="nav navbar-nav navbar-right">
           <li><a href="/users/edit">Dummy Edit Profile Link</a></li>
           <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Dummy Sign Out Link</a></li>
-        </ul>
+        </ul> -->
       </div><!-- /.navbar-collapse -->
     </div>
   </nav>
