--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -21,9 +21,92 @@
       <dd><img src="<%= @movie.image_url %>" width="100"></dd>
 
       <dt>Director</dt>
-      <dd><a href="/directors/<%=@movie.director_id%>"><%= Director.find_by(:id => @movie.director_id).name %></a></dd>
+      <dd>
+        <a href="/directors/<%=@movie.director_id%>">
+          <%= Director.find_by(:id => @movie.director_id).name %>
+        </a>
+      </dd>
+
+      <dt>Cast</dt>
+      <dd>
+        <ul class="list-group">
+            <% Character.where(:movie_id => @movie.id).each do |cast| %>
+                <li class="list-group-item">
+                  <a href="/actor/<%=cast.id%>">
+                    <%= Actor.find_by(cast.actor_id).name %> (<%=cast.name%>)
+                  </a>
+                </li>
+            <% end %>
+          </li>
+          <li class="list-group-item">
+            <form action="/create_movie" method="post">
+              <!-- Hidden input for authenticity token to protect from forgery -->
+              <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+              <!-- Label and input for title -->
+              <div class="form-group">
+                <label for="title" class="control-label">
+                  Title
+                </label>
+
+                <input type="text" id="title" name="title" placeholder="Title" class="form-control" value="<%= @movie.title %>">
+              </div>
+
+              <!-- Label and input for year -->
+              <div class="form-group">
+                <label for="year" class="control-label">
+                  Year
+                </label>
+
+                <input type="text" id="year" name="year" placeholder="Year" class="form-control" value="<%= @movie.year %>">
+              </div>
+
+              <!-- Label and input for duration -->
+              <div class="form-group">
+                <label for="duration" class="control-label">
+                  Duration
+                </label>
+
+                <input type="text" id="duration" name="duration" placeholder="Duration" class="form-control" value="<%= @movie.duration %>">
+              </div>
+
+              <!-- Label and input for description -->
+              <div class="form-group">
+                <label for="description" class="control-label">
+                  Description
+                </label>
+
+                <textarea id="description" name="description" placeholder="Description" class="form-control" rows="3"><%= @movie.description %></textarea>
+              </div>
+
+              <!-- Label and input for image_url -->
+              <div class="form-group">
+                <label for="image_url" class="control-label">
+                  Image url
+                </label>
+
+                <input type="text" id="image_url" name="image_url" placeholder="Image url" class="form-control" value="<%= @movie.image_url %>">
+              </div>
+
+              <!-- Input for director_id -->
+                <input type="hidden" id="director_id" name="director_id" placeholder="Director" class="form-control" value="<%= @director.id %>">
+              <button class="btn btn-success">
+                Create Movie
+              </button>
+              or
+              <a href="/movies">Cancel</a>
+            </form>
+
+
+
+
+
+
+          </li>
+      </dd>
 
     </dl>
+  </div>
 
     <div class="btn-group btn-group-justified">
       <a href="/movies" class="btn btn-primary">
