--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -42,7 +42,7 @@
                   Title
                 </label>
 
-                <input type="text" id="title" name="title" placeholder="Title" class="form-control" value="<%= @movie.title %>">
+                <input type="text" id="title" name="title" placeholder="Title" class="form-control">
               </div>
 
               <!-- Label and input for year -->
@@ -51,7 +51,7 @@
                   Year
                 </label>
 
-                <input type="text" id="year" name="year" placeholder="Year" class="form-control" value="<%= @movie.year %>">
+                <input type="text" id="year" name="year" placeholder="Year" class="form-control">
               </div>
 
               <!-- Label and input for duration -->
@@ -60,7 +60,7 @@
                   Duration
                 </label>
 
-                <input type="text" id="duration" name="duration" placeholder="Duration" class="form-control" value="<%= @movie.duration %>">
+                <input type="text" id="duration" name="duration" placeholder="Duration" class="form-control">
               </div>
 
               <!-- Label and input for description -->
@@ -78,7 +78,7 @@
                   Image url
                 </label>
 
-                <input type="text" id="image_url" name="image_url" placeholder="Image url" class="form-control" value="<%= @movie.image_url %>">
+                <input type="text" id="image_url" name="image_url" placeholder="Image url" class="form-control">
               </div>
 
               <!-- Input for director_id -->
