--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -17,16 +17,62 @@
       <dt>Image url</dt>
       <dd><img src="<%= @actor.image_url %>" width="100"></dd>
 
+      <dt>Number of Characters</dt>
+      <dd><%= @actor.characters.count%></dd>
+
       <dt>Filmography</dt>
       <dd>
         <ul class="list-group">
             <% Character.where(:actor_id => @actor.id).each do |character| %>
               <li class="list-group-item">
                 <a href="/movies/<%=character.movie_id%>">
-                  <%= Movie.find(character.movie_id).title %>
+                  <%= character.movie.title %>
                 </a>
                 (<%=character.name%>)
                 <% end %>
+              </li>
+          </ul>
+        </dd>
+        <dt>Create a new Character</dt>
+        <dd>
+        <ul class="list-group">
+              <li class="list-group-item">
+                <form action="/create_character" method="post">
+                  <!-- Hidden input for authenticity token to protect from forgery -->
+                  <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+                  <!-- Label and input for movie_id -->
+                  <div class="form-group">
+                    <label for="movie_id" class="control-label">
+                      Movie
+                    </label>
+
+                    <%= select_tag(:movie_id, options_from_collection_for_select(Movie.all, :id, :title, @character.movie_id), :class => "form-control")%>
+                    <a href ="/movies/new">or add a new movie</a>
+                     <!-- <input type="text" id="movie_id" name="movie_id" placeholder="Movie" class="form-control" value="<%= @character.movie_id %>"> -->
+                  </div>
+
+                  <!-- Label and input for actor_id -->
+                  <div class="form-group">
+
+                  <input type="hidden" id="actor_id" name="actor_id" placeholder="Actor" class="form-control" value="<%= @actor.id %>">
+                  </div>
+
+                  <!-- Label and input for name -->
+                  <div class="form-group">
+                    <label for="name" class="control-label">
+                      Name
+                    </label>
+
+                    <input type="text" id="name" name="name" placeholder="Name" class="form-control">
+                  </div>
+
+                  <button class="btn btn-success">
+                    Create Character
+                  </button>
+                  or
+                  <a href="/characters">Cancel</a>
+                </form>
               </li>
         </ul>
       </dd>
